--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,9 @@
-body{
-    color: white;
-}
 img{
     max-width: 25em;
 }
 h2{
     border-bottom: 1px solid white;
-    max-width:10em;
+    /* max-width:10em; */
 }
 a:hover{
     border-bottom: 1px solid white;
